Closed
Bug 1666653
Opened 5 years ago
Closed 5 years ago
Skeleton UI draws when opening the profile manager
Categories
(Firefox :: General, defect)
Tracking
()
RESOLVED
FIXED
84 Branch
People
(Reporter: Gijs, Assigned: alexical)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
STR:
- enable skeleton UI in some profile
- open nightly with the profile manager
ER:
no skeleton UI
AR:
skeleton UI is painted behind the profile manager
Updated•5 years ago
|
Severity: -- → S3
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → dothayer
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•5 years ago
|
||
Depends on D95575
Pushed by dothayer@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fcd75e267fa9
Only draw the skeleton UI when cmdline args are approved r=agashlin
https://hg.mozilla.org/integration/autoland/rev/be7f977e3482
Set sPreXULSkeletonUIEnabled correctly r=agashlin
Comment 4•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/fcd75e267fa9
https://hg.mozilla.org/mozilla-central/rev/be7f977e3482
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox84:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Updated•5 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•