Bug 1666653 - Only draw the skeleton UI when cmdline args are approved r=agashlin

Differential Revision: https://phabricator.services.mozilla.com/D95575