mozglue/misc/PreXULSkeletonUI.h
@@ -21,7 +21,8 @@ static const DWORD kPreXULSkeletonUIWindowStyle =
     WS_MINIMIZEBOX | WS_SIZEBOX | WS_SYSMENU;
 static const DWORD kPreXULSkeletonUIWindowStyleEx = WS_EX_WINDOWEDGE;
 
-MFBT_API void CreateAndStorePreXULSkeletonUI(HINSTANCE hInstance);
+MFBT_API void CreateAndStorePreXULSkeletonUI(HINSTANCE hInstance, int argc,
+                                             char** argv);
 MFBT_API HWND ConsumePreXULSkeletonUIHandle();
 MFBT_API bool WasPreXULSkeletonUIMaximized();
 MFBT_API void PersistPreXULSkeletonUIValues(int screenX, int screenY, int width,
@@ -30,7 +31,7 @@ MFBT_API void PersistPreXULSkeletonUIValues(int screenX, int screenY, int width,
                                             double urlbarWidthCSS,
                                             double cssToDevPixelScaling);
 MFBT_API bool GetPreXULSkeletonUIEnabled();
-MFBT_API void SetPreXULSkeletonUIEnabled(bool value);
+MFBT_API void SetPreXULSkeletonUIEnabledIfAllowed(bool value);
 MFBT_API void PollPreXULSkeletonUIEvents();
 
 }  // namespace mozilla
